--- a/paper/agda.tex
+++ b/paper/agda.tex
@@ -9,3 +9,8 @@
 % \input{Reduction}
 % \input{DeadlockFreedom}
 % \input{Safety}
+
+\begin{itemize}
+\item dire come si fa a garantire la side condition di \ForallRule
+\item parlare di HOAS
+\end{itemize}
